Salesforce/main/default/main/default/objects/Evento_Royalty_Item__c/fields/Modelo__c.field-meta.xml
<CustomField>
    <fullName>Modelo__c</fullName>
    <label>Modelo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>F</fullName>
            </value>
            <value>
                <fullName>M</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>