Salesforce/main/default/main/default/objects/Evento_Royalty_Item__c/fields/Quantidade__c.field-meta.xml
<CustomField>
    <fullName>Quantidade__c</fullName>
    <label>Quantidade</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>