Salesforce/main/default/main/default/objects/Evento_Royalty_Item__c/fields/Tamanio__c.field-meta.xml
<CustomField>
    <fullName>Tamanio__c</fullName>
    <label>Tamanho</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PP</fullName>
            </value>
            <value>
                <fullName>P</fullName>
            </value>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>G</fullName>
            </value>
            <value>
                <fullName>GG</fullName>
            </value>
            <value>
                <fullName>XG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>