Salesforce/main/default/main/default/objects/Evento_Royalty_Item__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <length>30</length>
    <type>Text</type>
</CustomField>