Salesforce/main/default/main/default/objects/Evento_Royalty_Item__c/fields/UF__c.field-meta.xml
<CustomField>
    <fullName>UF__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UF</label>
    <referenceTo>Estado__c</referenceTo>
    <relationshipLabel>Evento Royalty Items</relationshipLabel>
    <relationshipName>Evento_Royalty_Items</relationshipName>
    <type>Lookup</type>
</CustomField>