Salesforce/main/default/main/default/objects/Evento_Royalty_Item__c/fields/Valor_Unitario__c.field-meta.xml
<CustomField>
    <fullName>Valor_Unitario__c</fullName>
    <label>Valor Unitário</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>