Salesforce/main/default/main/default/objects/Evento_Royalty_Item__c/fields/Variedad__c.field-meta.xml
<CustomField>
    <fullName>Variedad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Variedad</label>
    <referenceTo>Variedad__c</referenceTo>
    <relationshipLabel>Evento Royalty Items</relationshipLabel>
    <relationshipName>Evento_Royalty_Items</relationshipName>
    <type>Lookup</type>
</CustomField>